# OpenREC

./: .gitignore  LICENSE  helper.sh  structure.txt
.github/workflows/: build.yml  cd.yml  ci.yml  release.yml
app/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
app/public/: manifest.json  sw.js
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/components/: AIStatus.tsx  ActivePlugins.tsx  DashboardLayout.tsx  InstalledPacks.tsx  RecentProjects.tsx  StorageUsage.tsx
app/src/components/dashboard/: ActivePlugins.tsx
app/src/components/editor/: EditorLayout.tsx  EffectsPanel.tsx  ExportPanel.tsx  Preview.tsx  PropertiesPanel.tsx  Timeline.tsx  TimelineClip.tsx  TimelineTrack.tsx  ToolPanel.tsx
app/src/components/hub/: CreatorProfile.tsx  HubLayout.tsx  PackCard.tsx  PackDetails.tsx  PluginCard.tsx  PluginDetails.tsx  Reviews.tsx
app/src/components/recorder/: AudioCapture.tsx  BufferIndicator.tsx  CameraCapture.tsx  RecorderLayout.tsx  RecordingControls.tsx  ScreenCapture.tsx
app/src/components/shared/: Button.tsx  Navbar.tsx  Notifications.tsx  Search.tsx  SearchBar.tsx  Sidebar.tsx
app/src/components/ui/: Card.tsx  Dropdown.tsx  GlassPanel.tsx  Modal.tsx  ProgressBar.tsx  Toggle.tsx  Tooltip.tsx
app/src/hooks/: useAIEditor.ts  useEditor.ts  useHub.ts  usePacks.ts  usePlugins.ts  useProjects.ts  useRecorder.ts  useStorage.ts
app/src/pages/: Dashboard.tsx  Editor.tsx  Hub.tsx  ProjectDetails.tsx  Recorder.tsx  Settings.tsx
app/src/services/: ai.ts  engine.ts  hub.ts  storage.ts  sync.ts
app/src/store/: aiSlice.ts  editorSlice.ts  index.ts  packsSlice.ts  pluginsSlice.ts  projectSlice.ts  recorderSlice.ts
app/src/styles/: animations.css  glassmorphism.css  globals.css  theme.css
app/src/types/: ai.ts  media.ts  pack.ts  plugin.ts  project.ts  recording.ts
app/src/utils/: formats.ts  platform.ts  validation.ts
docs/api/: engine.md  hub.md  plugins.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  ai-features.md  contributing.md  editing.md  installation.md  introduction.md  packs.md  plugins.md  recording.md
engine/: Cargo.toml
engine/ai/: Cargo.toml
engine/ai/src/: audio_enhance.rs  bitrate_enhance.rs  editor_ai.rs  lib.rs  super_resolution.rs
engine/core/: Cargo.toml
engine/core/recorder/: Cargo.toml
engine/core/recorder/src/: lib.rs
engine/core/recorder/src/audio/: microphone.rs  mixer.rs  mod.rs  system.rs
engine/core/recorder/src/buffer/: circular.rs  mod.rs  replay.rs
engine/core/recorder/src/capture/: camera.rs  mod.rs  region.rs  screen.rs  window.rs
engine/core/recorder/src/encoder/: audio.rs  hardware.rs  mod.rs  video.rs
engine/core/src/: lib.rs  media.rs  project.rs  timeline.rs
engine/editor/: Cargo.toml
engine/editor/src/: effects.rs  lib.rs  render.rs  timeline.rs
engine/export/: Cargo.toml
engine/export/src/: encoder.rs  lib.rs
engine/packs/: Cargo.toml
engine/packs/src/: lib.rs  reader.rs  validator.rs
engine/plugins/: Cargo.toml
engine/plugins/src/: lib.rs  runtime.rs  sandbox.rs  wasm_bridge.rs
engine/recorder/: Cargo.toml
engine/recorder/src/: lib.rs
engine/recorder/src/audio/: microphone.rs  mixer.rs  mod.rs  system.rs
engine/recorder/src/buffer/: circular.rs  mod.rs  replay.rs
engine/recorder/src/capture/: camera.rs  mod.rs  region.rs  screen.rs  window.rs
engine/recorder/src/encoder/: audio.rs  hardware.rs  mod.rs  video.rs
hub-server/: Cargo.toml  Dockerfile
hub-server/migrations/: 001_create_users.sql  002_create_packs.sql  003_create_plugins.sql  004_create_reviews.sql
hub-server/src/: main.rs
hub-server/src/models/: mod.rs  pack.rs  plugin.rs  review.rs  user.rs
hub-server/src/routes/: mod.rs  packs.rs  plugins.rs  reviews.rs  users.rs
hub-server/src/services/: cdn.rs  mod.rs  storage.rs
plugins-example/hello-world/: Cargo.toml  plugin.json
plugins-example/hello-world/src/: lib.rs
plugins-example/youtube-uploader/: Cargo.toml  plugin.json
plugins-example/youtube-uploader/src/: lib.rs
scripts/: build-static.sh  build.sh  dev.sh  release.sh  test.sh
