[workspace]
members = [
    "core",
    "recorder",
    "editor",
    "ai",
    "plugins",
    "packs",
    "export",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["OpenREC Foundation"]
repository = "https://github.com/openrec/openrec"
description = "OpenREC Engine - Estúdio open-source profissional para criadores de conteúdo"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
