[package]
name = "openrec-hub"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "API do OpenREC Hub"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.10"
thiserror = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
