[package]
name = "openrec"
version = "0.1.0"
edition = "2021"
description = "OpenREC Desktop App"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "openrec"
path = "src/main.rs"
