[package]
name = "openrec-ai"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Motor de IA do OpenREC"

[dependencies]
openrec-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
ndarray = "0.15"
image = "0.24"
hound = "3.5"
ort = { version = "1.16", features = ["download-binaries"] }
