[package]
name = "openrec-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Núcleo do OpenREC - estruturas de dados e lógica fundamental"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
