[package]
name = "openrec-packs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Gerenciador de packs da comunidade do OpenREC"

[dependencies]
openrec-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
zip = "0.6"
walkdir = "2"
