[package]
name = "openrec-plugins"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Sistema de plugins do OpenREC (WASM runtime)"

[dependencies]
openrec-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
wasmtime = "14.0"
wasi-common = "14.0"
