[package]
name = "openrec-recorder"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Motor de gravação inteligente do OpenREC"

[dependencies]
openrec-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
x11cap = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
scrap = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
pulseaudio = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio = "0.11"
